--- a/2018:3:13:DHCP.md
+++ b/2018:3:13:DHCP.md
@@ -1,8 +1,10 @@
 # dhclient
 
-## Unimportant background
+## The Problem
+### How I came across the problem
 I used `dnsmasq` and `dhclient` to implement my network prototype. However the time for dhclient to discover the dhcp server has always been longer than what I wanted. Turned out it was because of my `dhclient.lease` file. I first noticed that there was something wrong with my lease files by enabling verbose mode when running dhclient. My lease file was corrupted for some unknown reason, so I deleted the files and ran my script again, surprisingly it turned out to be *much quicker*. Just as I thought everything would be fixed if I remove the lease files before running my script, I noticed that my VM no longer have access to the domain name server. So I restarted my virtual machine and noticed that the dhcp lease file contains the information for the domain name server that my VM was originally using, and by removing them at the start of my script, I have changed the DNS to a virtual gateway (that I've created) which does not have a DNS running.
 
+## The actual problem
 This is what a DHCP client/server interaction *should* look like, which takes less than 1 second.:
 ```
 DHCPDISCOVER on veth0 to 255.255.255.255 port 67 interval 3 (xid=0x494c7827)
