Added more notes on Nix derivation expression

--- a/2018:04:24:Nix.md
+++ b/2018:04:24:Nix.md
@@ -10,6 +10,69 @@
 - Content addressability at suitable places
 - Declarative Nix expression
 
-# Implementation
-- PatchELF to replace runtime dependency links. `sed` can be used for hardcoded static links.
-- Nix expressions are hard to be identified via a cryptographic hash due to scatter of langauges and imports. Hence Nix derivation expressions are translated recursively into a lower level *store derivations* for smaller components. This is usually done automatically through `nix-env` but can be done manually through `nix-instantiate`.
+# Implementation Difficulties and Solutions
+## Changing runtime dependencies in compiled binary
+PatchELF to replace runtime dependency links. `sed` can be used for hardcoded static links.
+
+## Store derivatives
+Nix expressions are hard to be identified via a cryptographic hash due to scatter of languages and imports. For these reasons nix expressions are translated to a more primitive language *store derivatives*, which encodes single component build actions.
+
+Store derivations are placed in the Nix store, and as such have a store path too. The store derivations each have an unique identification of objects of source deployment, just as path of binary components uniquely identify objects of binary deployment.
+
+An example Nix Derivation Expression
+```
+{stdenv, fetchurl, perl}:
+
+stdenv.mkDerivation {
+	name = "hello-2.1.1";
+	builder = "./builder.sh";
+	src = fetchurl {
+		url = http://ftp.gnu.org/pub/gnu/hello/hello-2.1.1.tar.gz;
+		md5 = "70c9ccf9fac07f762c24f2df2290784d";
+	};
+	inherit perl;
+}
+```
+
+The result of this function is a derivation - a component build action which derives the component from its inputs. `mkDerivation` is a function provided by `stdenv` that builds a component from a set of attributes.
+
+If the `build` attribute is not specified, `mkDerivation` will use the standard Unix approach (`configure; make; make install`).
+
+Example builder:
+```
+source $stdenv/setup
+PATH=$perl/bin/:$PATH
+tar xvfz $src
+cd hello-*
+./configure --prefix=$out
+make
+make install
+```
+
+When Nix runs the builder, it initially clears all environemtn variables (except for the attributes declared in the derivation). This prevents undeclared inputs.
+
+An example Store derivation
+```
+{ output = "/nix/store/hashhashhash-hello-2.1.1",
+  inputDrvs = {
+    "/nix/store/hashhashhash-bash-3.0.drv",
+    "/nix/store/hashahshhash-hello-2.1.1.tar.gz.drv",
+    "/nix/store/hashhashhash-stdenv-linux.drv",
+  },
+  inputSrcs = {"/nix/store/abcabcabc-builder.sh"},
+  system = "i686-linux",
+  builder = "/nix/store/hashhashhash-bahs-3.0/bin/sh",
+  args = ["-e", "/nix/store/abcabcabc-builder.sh"],
+  envVars = {
+    {"builder", "/nix/store/hashahshahs-bash-3.0/bin/bash"},
+    {"name", "hello-2.1.1"}
+    {"out", "/nix/store/hashhashhash-hello-2.1.1"}
+    {"perl", "/nix/store/hashahshahs-perl-5.8.6"}
+    ...
+  }
+}
+```
+output - path that will be built by this derivation.
+inputDrvs - paths of all the input derivations.
+inputSrcs - path of all input sources in the Nix store. The file `builder.sh` has been copied to the nix store since everything used by the build process must be inside Nix store to prevent undeclared dependencies.
+- builder - program to be excuted.
