Added notes on store derivation and began reading fixed-output-derivation

--- a/2018:04:24:Nix.md
+++ b/2018:04:24:Nix.md
@@ -9,16 +9,13 @@
   - Problem: Some dependencies require mutable states
 - Content addressability at suitable places
 - Declarative Nix expression
+- Atomic, allow rollbacks
 
 # Implementation Difficulties and Solutions
 ## Changing runtime dependencies in compiled binary
 PatchELF to replace runtime dependency links. `sed` can be used for hardcoded static links.
 
-## Store derivatives
-Nix expressions are hard to be identified via a cryptographic hash due to scatter of languages and imports. For these reasons nix expressions are translated to a more primitive language *store derivatives*, which encodes single component build actions.
-
-Store derivations are placed in the Nix store, and as such have a store path too. The store derivations each have an unique identification of objects of source deployment, just as path of binary components uniquely identify objects of binary deployment.
-
+## Nix derivation expressions
 An example Nix Derivation Expression
 ```
 {stdenv, fetchurl, perl}:
@@ -49,9 +46,13 @@ make
 make install
 ```
 
-When Nix runs the builder, it initially clears all environemtn variables (except for the attributes declared in the derivation). This prevents undeclared inputs.
+When Nix runs the builder, it initially clears all environment variables (except for the attributes declared in the derivation). This prevents undeclared inputs. `$stdenv` points to the location of the standard environment being used, `$perl` points to location of the Perl interpreter. `$src` points to the location in Nix stroe to which the distribution was downloaded. `$out` is the location where the the component will eventually be stored in the Nix store. This means before the build script is ran, the component's hash would've been computed already.
 
-An example Store derivation
+Nix expressions are hard to be identified via a cryptographic hash due to scatter of languages and imports. For these reasons nix expressions are translated to a more primitive language *store derivatives*, which encodes single component build actions.
+
+Store derivations are placed in the Nix store, and as such have a store path too. The store derivations each have an unique identification of objects of source deployment, just as path of binary components uniquely identify objects of binary deployment.
+
+An example Store derivation:
 ```
 { output = "/nix/store/hashhashhash-hello-2.1.1",
   inputDrvs = {
@@ -72,7 +73,36 @@ An example Store derivation
   }
 }
 ```
-output - path that will be built by this derivation.
-inputDrvs - paths of all the input derivations.
-inputSrcs - path of all input sources in the Nix store. The file `builder.sh` has been copied to the nix store since everything used by the build process must be inside Nix store to prevent undeclared dependencies.
-- builder - program to be excuted.
+
+As seen from this example, store derivations contains only sources from the Nix store, this means that every component in the store derivation is content hashed, and hence we can address the store derivation by the hash of its content, which is enough to uniquely identify the context of this derivation.
+
+To be able to content address the Nix Expression that builds a container image, we might want to use `nix-instantiate` to produce the store derivation of the nix derivation expression, then use the content hash of the store derivation to address the artifact spec.
+
+# Deploying Nix
+After the building stage, nix's runtime dependencies can be seen by querying the closure of one Nix package via `nix-store -qR /nix/store/<binary-path>`. These dependencies are pointed by the binary that we are deploying.
+
+To perform actual software deployment, it is necessary to get the Nix expressions to the client machines. At the current stage, matrix is only using x86 running NixOS, so it isn't a problem. But what if at a later stage each node will have a very different architecture? We will need to have some ways to calculate the content hash of a build action without the need of deploying it to the target machine just yet. Update: Nix mkDerivation expression already contains an attribute `system`, which means this expression should be deployed only in this particular architecture. Hence the store paths should remain the same.
+
+## Translating Nix expressions to Store derivations
+`nix-instantiate` takes a nix expression and evaluates it to normal form. The normal form should be a call to derivation, or a nested structure of lists and attribute sets that contain calls to derivation. Then these derivation nix expressions are subsequently translated to store expressions again.
+
+Abstract syntax of store derivation:
+```
+data StoreDrv = StoreDrv {
+  output: Path,
+  outputHash: String,
+  outputHashAlgo: String,
+  inputDrvs: Path,
+  inputSrcs: Path,
+  system: String,
+  builder: Path,
+  args: String,
+  envVars: [{String, String}]
+}
+```
+
+The `output` is the path of the store derivation computed by `makePath("output:out", hashDrv(d), name)` where `d` is the store derivation derived from the nix expression assuming `output=""`.
+
+The `outputHashAlgo` and `outputHash` makes up the **fixed output derivation**.
+
+// TODO: Read more on page 102 onwards
