--- a/2018:04:24:Nix.md
+++ b/2018:04:24:Nix.md
@@ -12,4 +12,7 @@
 
 # Implementation
 - PatchELF to replace runtime dependency links. `sed` can be used for hardcoded static links.
-- Nix expressions are hard to be identified via a cryptographic hash due to scatter of langauges and imports. Hence Nix derivation expressions are translated recursively into a lower level *store derivations* for smaller components. This is usually done automatically through `nix-env` but can be done manually through `nix-instantiate`.
+
+
+Nix expressions are hard to be identified via a cryptographic hash due to scatter of languages and imports.
+Hence Nix derivation expressions are translated recursively into a lower level *store derivations* for smaller components. This is usually done automatically through `nix-env` but can be done manually through `nix-instantiate`.
