added nix todos

--- a/2018:04:24:Nix.md
+++ b/2018:04:24:Nix.md
@@ -106,3 +106,12 @@ The `output` is the path of the store derivation computed by `makePath("output:o
 The `outputHashAlgo` and `outputHash` makes up the **fixed output derivation**.
 
 // TODO: Read more on page 102 onwards
+
+# find out what these things means
+- how is the hash of the instructions generated
+- how is the hash of the output generated
+
+- `nix-build` analyse it soutput and see how to build it from scrach
+- see if i can build one for oci containers - see how docker-tools use.
+- `nix-store` look at source code
+- eventhough output is removed, derivation still exists.
