grammar and clarification of what i need to find out

--- a/2018:04:24:Nix.md
+++ b/2018:04:24:Nix.md
@@ -108,10 +108,9 @@ The `outputHashAlgo` and `outputHash` makes up the **fixed output derivation**.
 // TODO: Read more on page 102 onwards
 
 # find out what these things means
-- how is the hash of the instructions generated
-- how is the hash of the output generated
-
-- `nix-build` analyse it soutput and see how to build it from scrach
-- see if i can build one for oci containers - see how docker-tools use.
-- `nix-store` look at source code
-- eventhough output is removed, derivation still exists.
+- `nix-build` analyse its output and see how to build it from scratch
+  - how are the hashes of the nix expression instructions generated
+  - how is the hash of the derived output generated
+- see if I can build one for OCI containers - see how docker-tools are done.
+- Look into `nix-store` and `nix-build`'s source code
+- Even though output is removed, derivation still exists, why is that?
