Added notes on Nix

--- a/2018:4:24:Nix.md
+++ b/2018:4:24:Nix.md
@@ -86,22 +86,25 @@ To perform actual software deployment, it is necessary to get the Nix expression
 ## Translating Nix expressions to Store derivations
 `nix-instantiate` takes a nix expression and evaluates it to normal form. The normal form should be a call to derivation, or a nested structure of lists and attribute sets that contain calls to derivation. Then these derivation nix expressions are subsequently translated to store expressions again.
 
+To clarify, `nix-instantiate` is a function that translates the arguments attribute set (produced by nix expression) into a store derivation.
+
 Abstract syntax of store derivation:
 ```
 data StoreDrv = StoreDrv {
   output: Path,
   outputHash: String,
   outputHashAlgo: String,
-  inputDrvs: Path,
-  inputSrcs: Path,
+  inputDrvs: [Path],
+  inputSrcs: [Path],
   system: String,
   builder: Path,
-  args: String,
-  envVars: [{String, String}]
+  args: [String],
+  envVars: [(String, String)]
 }
 ```
 
-The `output` is the path of the store derivation computed by `makePath("output:out", hashDrv(d), name)` where `d` is the store derivation derived from the nix expression assuming `output=""`.
+The `output` is the path of the resulting store derivation computed from the *inputs*, not from the derived output.
+It is generated using: `makePath("output:out", hashDrv(d), name)` where `d` is the store derivation derived from the nix expression assuming `output=""`.
 
 The `outputHashAlgo` and `outputHash` makes up the **fixed output derivation**.
 
