--- a/2018:4:24:Nix.md
+++ b/2018:4:24:Nix.md
@@ -86,14 +86,24 @@ To perform actual software deployment, it is necessary to get the Nix expression
 ## Translating Nix expressions to Store derivations
 `nix-instantiate` takes a nix expression and evaluates it to normal form. The normal form should be a call to derivation, or a nested structure of lists and attribute sets that contain calls to derivation. Then these derivation nix expressions are subsequently translated to store expressions again.
 
-To clarify, `nix-instantiate` is a function that translates the arguments attribute set (produced by nix expression) into a store derivation.
+To clarify, `nix-instantiate` is a function that translates the arguments attribute set (produced by nix expression) into a store derivation. It:
+	1. Computes the store derivation from nix expression
+	2. Writes the store derivation in `/nix/store`
+	3. Returns the original attribute set, with three more attributes appended:
+		- `drvPath` path of the store derivation
+		- `outPath` output Path of the store derivation
+		- `type` set to value `"derivation"`. Distinguishes `derivation and `subderivation during recursive calls.
+
+
 
 Abstract syntax of store derivation:
+
+Let `{as}` be the attribute set derived from the derivation nix expression.
 ```
 data StoreDrv = StoreDrv {
-  output: Path,
-  outputHash: String,
-  outputHashAlgo: String,
+  output: Path,			# store derivation hash, initally an empty string
+  outputHash: String,		# content address of fixed-output derivation ()
+  outputHashAlgo: String,	
   inputDrvs: [Path],
   inputSrcs: [Path],
   system: String,
@@ -102,11 +112,69 @@ data StoreDrv = StoreDrv {
   envVars: [(String, String)]
 }
 ```
+- output is the content address of the final product in the nix store. It reflects all information that goes into the derivation. The final output path is also placed in `$out` for the builder.
+- envVars are computed 
 
-The `output` is the path of the resulting store derivation computed from the *inputs*, not from the derived output.
-It is generated using: `makePath("output:out", hashDrv(d), name)` where `d` is the store derivation derived from the nix expression assuming `output=""`.
+### Translation Algorithm
 
-The `outputHashAlgo` and `outputHash` makes up the **fixed output derivation**.
+Let `processBinding` be a function that takes in a nix expression `e` and produce a set `{drvs = { }, srcs = { }, res = { }}` where `drvs` is a set of store derivation paths in the expression, `srcs` are store path for sources in the expression, and `res` are a set of strings that represent the normal form of the nix expression.
+
+The algorithm for `nix-instantiate` is shown as follows:
+
+```
+instantiate(as): # Where as is the attribute set from derivation
+	name = eval(as.name)
+	if name ends in ".drv" abort
+	if name contains invalid characters abort
+	d = StoreDrv {
+		output = "" # Empty string
+		outputHash = eval(as.outputHash) if attr. exists otherwise ""
+		outputHashAlgo = ""
+		inputDrvs = {processsBinding(e).drvs | (n = e) in as}
+		inputSrcs = {inputSrcs = processBinding(e).srcs | (n = e) in as}
+		system = eval(as.system) # must be a string
+		builder = concSpec(processBinding(as.builder).res)
+		args = map(\e.processBinding(e).res, as.args)
+		envVars = {(n, concSp(processBinding(e).res)) | (n = e) in as} union {(out, "")}
+	}
+	d.output = makePath("output:out", hashDrv(d), name))
+	d.envVars["out"] = d.output
+	p = addToStore(printDrv(d), d.inputDrvs union d.input, name + ".drv")
+	return {outPath = d.output, drvPath = p}
+```
+
+Now let's go through this line by line.
+
+1. instantiate is a function that takes in as, where as is the attribute set from nix derivation.
+2. `name` will evaluate to the name of the derivation for example `hello-2.0`
+3. Now we begin to structure our Store Derivation attribute set:
+	- output is originally an empty string
+	- outputHash is ...
+	- inputDrvs will be obtained by going through everything in `as`, and running `processBinding` on it.
+	  (processBinding's pseudocode is on page 103 of the thesis)
+		- This will make sure all paths in `as` are added to the nix store by their content
+		- return the `.drvs` of all *derivations* found in the `as`.
+		- Otherwise flatten nested lists if there are any, then return the derivations if in list.
+	- uboytSrcs does similar things as inputDrvs, except this time we are getting the `srcs` produced.
+	  	- srcs are produced when `e` is a path, the store path will be returned.
+		- Otherwise, if there are lists, flatten it and return the sources found.
+	- system is simply the `system` attribute in the derivation attribute set.
+	- builder has two parts:
+		1. take in all `res` from the `e` supplied, this gives the normal form of the nix expression, such as `true` evaluate to `"1` and false evaluate to `""` and etc. In case of an derivation, res returns the evaluated `as.outPath`, `outPath` is the eventual location of there the output of the derivation will be stored, it is initally set to `""`, then  
+
+### Calculating the store paths
+Nix store is a directory contains file system objects (FSOs) such as software components, user environments and store derivations. 
+
+The operation `addToStore(fso, refs, name)` adds an FSO to the Nix store. `ref` contains the references entry for the resulting path, and will be used to update the corredponding referrer mapping in the result path. 
+
+```bash
+addToStore(fso, refs, name):
+	h = hash(serialise(fso))
+	p = makePath("source", h.hexdigest_trunc(), name)
+	if p is valid:
+		mkdir -p $(p) # somewhere in here references are set
+	return p
+```
 
 // TODO: Read more on page 102 onwards
 
@@ -117,3 +185,5 @@ The `outputHashAlgo` and `outputHash` makes up the **fixed output derivation**.
 - see if I can build one for OCI containers - see how docker-tools are done.
 - Look into `nix-store` and `nix-build`'s source code
 - Even though output is removed, derivation still exists, why is that?
+- Investigate runtime closure, build time closure
+- .drv hash vs output path hash
