minor spelling error

--- a/2018:4:24:Nix.md
+++ b/2018:4:24:Nix.md
@@ -103,7 +103,7 @@ Let `{as}` be the attribute set derived from the derivation nix expression.
 data StoreDrv = StoreDrv {
   output: Path,			# store derivation hash, initally an empty string
   outputHash: String,		# content address of fixed-output derivation ()
-  outputHashAlgo: String,	
+  outputHashAlgo: String,
   inputDrvs: [Path],
   inputSrcs: [Path],
   system: String,
@@ -113,7 +113,7 @@ data StoreDrv = StoreDrv {
 }
 ```
 - output is the content address of the final product in the nix store. It reflects all information that goes into the derivation. The final output path is also placed in `$out` for the builder.
-- envVars are computed 
+- envVars are computed
 
 ### Translation Algorithm
 
@@ -155,17 +155,17 @@ Now let's go through this line by line.
 		- This will make sure all paths in `as` are added to the nix store by their content
 		- return the `.drvs` of all *derivations* found in the `as`.
 		- Otherwise flatten nested lists if there are any, then return the derivations if in list.
-	- uboytSrcs does similar things as inputDrvs, except this time we are getting the `srcs` produced.
+	- inputSrcs does similar things as inputDrvs, except this time we are getting the `srcs` produced.
 	  	- srcs are produced when `e` is a path, the store path will be returned.
 		- Otherwise, if there are lists, flatten it and return the sources found.
 	- system is simply the `system` attribute in the derivation attribute set.
 	- builder has two parts:
-		1. take in all `res` from the `e` supplied, this gives the normal form of the nix expression, such as `true` evaluate to `"1` and false evaluate to `""` and etc. In case of an derivation, res returns the evaluated `as.outPath`, `outPath` is the eventual location of there the output of the derivation will be stored, it is initally set to `""`, then  
+		1. take in all `res` from the `e` supplied, this gives the normal form of the nix expression, such as `true` evaluate to `"1` and false evaluate to `""` and etc. In case of an derivation, res returns the evaluated `as.outPath`, `outPath` is the eventual location of there the output of the derivation will be stored, it is initially set to `""`, then  
 
 ### Calculating the store paths
-Nix store is a directory contains file system objects (FSOs) such as software components, user environments and store derivations. 
+Nix store is a directory contains file system objects (FSOs) such as software components, user environments and store derivations.
 
-The operation `addToStore(fso, refs, name)` adds an FSO to the Nix store. `ref` contains the references entry for the resulting path, and will be used to update the corredponding referrer mapping in the result path. 
+The operation `addToStore(fso, refs, name)` adds an FSO to the Nix store. `ref` contains the references entry for the resulting path, and will be used to update the corredponding referrer mapping in the result path.
 
 ```bash
 addToStore(fso, refs, name):
