Added notes on store path

--- a/2018:4:24:Nix.md
+++ b/2018:4:24:Nix.md
@@ -101,10 +101,8 @@ Abstract syntax of store derivation:
 Let `{as}` be the attribute set derived from the derivation nix expression.
 ```
 data StoreDrv = StoreDrv {
-  output: Path,			# store derivation hash, initally an empty string
-  outputHash: String,		# content address of fixed-output derivation ()
-  outputHashAlgo: String,
-  inputDrvs: [Path],
+  output: [(out, Path)],
+  inputDrvs: [Path, [out]],
   inputSrcs: [Path],
   system: String,
   builder: Path,
@@ -112,7 +110,15 @@ data StoreDrv = StoreDrv {
   envVars: [(String, String)]
 }
 ```
-- output is the content address of the final product in the nix store. It reflects all information that goes into the derivation. The final output path is also placed in `$out` for the builder.
+-  `output` specifies a number of outputs `out` and its respective path `Path`. Let's refer to these ouputs (`out`) as output references, they are just the `$out` variables in the builder. //TODO: investigate how hash is calculated
+- `inputDrvs` is a list of store derivation paths of the dependencies, each with a list of output references that are needed to retrieve the inputs for this derivation.
+- `inputSrcs` the outPath of the building script.
+-
+- ``
+
+
+- `outputHash`
+output is the content address of the final product in the nix store. It reflects all information that goes into the derivation. The final output path is also placed in `$out` for the builder.
 - envVars are computed
 
 ### Translation Algorithm
