--- a/2018:07:04:cgo.md
+++ b/2018:07:04:cgo.md
@@ -29,7 +29,7 @@ defer C.free(unsafe.Pointer(cs))
 When Go tool sees `import "C"`, it will look for other non-Go files in the directory and compile them as part of the Go package.
 
 ## Go References to C
-C's struct field names that are keywords in Go can be accessed by prefixing them with an underscore. If x points at a C struct with a field name "type", `x._type` accesses the field. C struct fields taht cannot be expressed in Go, such as bit fields or misaligned data, are omitted in the Go struct.
+C's struct field names that are **keywords** in Go can be accessed by prefixing them with an underscore. If x points at a C struct with a field name "type", `x._type` accesses the field. For non-keywords, they are simply `x.type`. C struct fields that cannot be expressed in Go, such as bit fields or misaligned data, are omitted in the Go struct.
 
 Standard numeric types are available under:
 ```go
@@ -64,7 +64,22 @@ Go doesn't have support for C's union type in the general case, they are represe
 
 Go structs cannot embed fields with C types.
 
+## Passing pointers
+Passing pointers between Go/C is complicated due to garbage collection in Go.
 
+Here we refer to **Go pointers** as pointer to memory allocated by Go. Both the `&` operator and the `new` function causes Go to allocate memory. And **C pointers** are pointers allocated by C (such as C.malloc).
 
+A pointer type may hold a Go pointer or a C pointer. Note that some Go types *always* include Go pointers, such as string, slice, interface, channel, map and function types.
 
+### Calling C from Go
+- Go code may pass a Go pointer to C provided that the Go memory it points to **does not contain any Go pointers**.
+- C code may not keep a copy of a Go pointer after the call returns.
 
+### Calling Go from C
+- A Go function called by C code may not return a Go pointer (which implies it may not return a string, slice, channel and so forth).
+- A Go function called by C code may take a Go pointer as an argument, but it must preserve the property that the Go memory to which it points to does not contain any Go pointers.
+- Go code may not store Go pointer in C memory at any time.
+
+The rules are checked dynamically at runtime. The checking is controlked by `$GODEBUG` env variable, `1` implements reasonaly cheap dynamic check, checks are disabled entirely by setting the variable to `0`. Complete checking of pointer handling is available by setting it to `2`.
+
+It is possible to break these rules via unsafe package, but programs that violates the rules are likely to fail in unexpected ways.
