--- a/2018:07:04:cgo.md
+++ b/2018:07:04:cgo.md
@@ -83,3 +83,5 @@ A pointer type may hold a Go pointer or a C pointer. Note that some Go types *al
 The rules are checked dynamically at runtime. The checking is controlked by `$GODEBUG` env variable, `1` implements reasonaly cheap dynamic check, checks are disabled entirely by setting the variable to `0`. Complete checking of pointer handling is available by setting it to `2`.
 
 It is possible to break these rules via unsafe package, but programs that violates the rules are likely to fail in unexpected ways.
+
+### Expressing GoMap in C
