Deleted Context and moved command states into command structs

--- a/language/go/2018:07:11:go.md
+++ b/language/go/2018:07:11:go.md
@@ -24,3 +24,9 @@ func foo(p *ParentInterface) {
 	fmt.Println(c.b)
 }
 ```
+
+# Interface vs Struct
+
+Go interfaces maintains a pointer to a struct.
+
+Hence it is never really necessary to be passing pointer to interfaces, as they are pointers themselves.
