Added notes on cgroups

--- a/os/2018:08:05:cgroups2.md
+++ b/os/2018:08:05:cgroups2.md
@@ -26,8 +26,23 @@ Available subsystems:
 
 
 # Basic Operations
+## Mount cgroup2
+
 ```
 mount -t cgroup2 none $MOUNT_POINT
 ```
 
 v2 is fully backward compatible. It does not support all controllers offerred by v1, but those controllers can be bounded to another v1 hierarchy. (i.e. a system can have both v1 and v2 cgroups mounted)
+
+## Create new cgroup
+```
+mkdir $CGROUP_NAME
+```
+under the cgroup mount point.
+
+Each cgroup has a read/write interface `cgroup.procs`
+
+
+
+# Cgroup namespace
+Cgroup namepsace virtualize the view of a process's cgroups as seen via `/proc/[pid]/cgroup` and `/proc/[pid]/mountinfo`
